# Phionics-OSS

./: README.md  phionics langchain  pyproject.toml  read more  updated code
examples/: 01_minimal.py  02_deeper_dive.py
phionics/: Core.py  __init__.py
