[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phionics"
version = "0.1.0"
description = "Phionics: minimal coherence-ranking membrane (starter OSS)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

[tool.setuptools]
packages = ["phionics"]
